# python-playground

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
Day 1/: bools+conditionals.py  numbers+mathematical-ops.py
Day 10/: depth+breadth-first-search.py
Day 11/dataclasses/: data_class.py
Day 11/json/: json.py
Day 12/pydantic-deeper/: function-validators.py  validation+serialization.py
Day 13/FastAPI/: concurrency+parallelism.py
Day 14/Recursive Data Traversal/: intro.py  quicksort.py  walking-yaml.py
Day 16/: dynamic-array.py  easy-dynamic-array.py  valid-sudoku.py
Day 2/Functions + Scope/: ceasar-cipher.py  func.py
Day 2/Variables/: var-exercises.py
Day 3/: complex-nums  rpg-character.py
Day 3/Loops + Sequences/: enumerate+zip.py  lists.py  loops.py  ranges.py
Day 4/: list-inputs-unpacking.py  pin-extractor.py
Day 4/Dictionaries and Sets/: dictionary-looping.py  medical-validator.py
Day 4/Libraries and Modules/: library.py
Day 4/Personal Movie Tracker (PMT)/: PMT_README.md  movies.json  pmt.py
Day 6/: ISBN-validator.py
North Star Projects/: THEIDEA.md
data-structures/: linked_list.md  linked_list_operations.py
projects/: number-guessing-game.py
projects/weather/: api.py  format.py  location.py  pyproject.toml
projects/weather/docs/: api-connecting.md  location-development.md  output-design.md
projects/weather/weather_cli/: api.py  cli.py  current_location.json  location.py  printout.py  profiles.py  weather_prefs.json
sandbox/: chess-remake.md  hashing.py
tools/: sort_downloads.py
(+116 files in other folders)
