[project]
name = "weather"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "dotenv"
]

[project.scripts]
weather = "weather_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_cli"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "UP", "SIM"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "test.*"
ignore_errors = true
